# fastapi_demo

./: .flake8  .gitignore  README  database.py  logger.py  main.py  pyproject.toml  routers.py  settings_for_use.py
ai_coding/north/contract/: ai_coding_cmd.py
ai_coding/north/local/: ai_coding_local.py
ai_coding/north/remote/: ai_coding_api.py
ai_coding/south/client_adapter/: get_location_client_adapter.py
ai_learning/: ai_learning.py
shopping/domain/aggregation/: cart.py  order.py  product.py  vo.py
shopping/south/repository_adapter/dao/tables/: cart_table.py  order_table.py  product_table.py
users/domain/aggregation/: user.py
users/domain/port/client/: jwt_client.py  password_encryption.py  password_encryption_client.py
users/domain/port/repository/: user_repository.py
users/domain/service/: user_service.py
users/north/contract/: response.py  user_local_cmd.py
users/north/local/: user_local_service.py
users/north/remote/: user_api.py
users/south/client_adapter/: jwt_client_adapter.py  password_encryption_adapter.py
users/south/repository_adapter/: user_repository_adapter.py
users/south/repository_adapter/dao/: user_repository_dao.py
users/south/repository_adapter/dao/tables/: user_table.py
utils/: to_model.py
